applied patch for STANBOL-1313 with some modifications required for the 0.12 branch
git-svn-id: https://svn.apache.org/repos/asf/stanbol/branches/release-0.12@1587797 13f79535-47bb-0310-9956-ffa450edef68